Crud de categoria

--- a/SistemaSublimas/Views/Shared/_Layout.cshtml
+++ b/SistemaSublimas/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Tienda" asp-action="Index">Tiendas</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Categoria" asp-action="Index">Categorias</a></li>
                             </ul>
                         </li>
 
