--- a/SistemaSublimas/Views/Shared/_Layout.cshtml
+++ b/SistemaSublimas/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Tienda" asp-action="Index">Tiendas</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Categoria" asp-action="Index">Categorias</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Marca" asp-action="Index">Marcas</a></li>
                             </ul>
                         </li>
 
