Paginacion y filtros de busqueda

--- a/SistemaSublimas/Views/Shared/Error.cshtml
+++ b/SistemaSublimas/Views/Shared/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ErrorViewModel
-@using SistemaSublimas.Modelos.ViewModels
+using SistemaSublimas.Modelos.ViewModels.ErrorViewModels
 
 @{
     ViewData["Title"] = "Error";
