--- a/SistemaSublimas/Areas/Inventario/Views/Home/Index.cshtml
+++ b/SistemaSublimas/Areas/Inventario/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SistemaSublimas.Modelos.Producto>
+﻿@model SistemaSublimas.Modelos.Especificaciones.PagedList<SistemaSublimas.Modelos.Producto>
 @using SistemaSublimas.Utilidades
 @{
     ViewData["Title"] = "Home Page";
@@ -15,15 +15,17 @@
  
 <section>
     <div class="container my-2">
-        <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Buscar ..." aria-label="Buscar" aria-describedby="button-addon2" />
-                <button class="btn btn-outline-primary">
-                    <i class="bi bi-search"></i>
-                </button>
+        <form asp-action="Index" method="get">
+            <div class="col-lg-6 col-md-6 col-sm-6 d-flex">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Buscar ..." aria-label="Buscar" aria-describedby="button-addon2"
+                           name="busqueda" value="@ViewData["BusquedaActual"]" />
+                    <button type="submit" class="btn btn-outline-primary">
+                        <i class="bi bi-search"></i>
+                    </button>
             </div>
         </div>
-
+        </form>
         <div class="row">
             @foreach(var producto in Model)
             {
@@ -32,7 +34,7 @@
                     <img src="@DS.ImagenRuta@producto.ImagenUrl" class="card-img-top" style="aspect-ratio: 1 / 1 "/>
                         <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@producto.Descripcion</h5>
-                        <p class="card-text"> $ @String.Format("{0:#,##0.000}", producto.Precio)</p>
+                        <p class="card-text"> $ @String.Format("{0:#,##0.00}", producto.Precio)</p>
                         <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto bg-white">
                             <a href="#" class="btn btn-outline-primary">
                                 <i class="bi bi-tags-fill"></i>Ver detalle
@@ -43,5 +45,27 @@
                 </div>
             }
         </div>
+        <a asp-action="Index"
+           asp-route-pageNumber="@(1)" class="btn btn-outline-primary"
+           asp-route-BusquedaActual="@ViewData["BusquedaActual"]">
+            <i class="bi bi-skip-start-fill"></i>
+       </a>
+        <a asp-action="Index"
+           asp-route-pageNumber="@((int)ViewData["PageNumber"]-1)" class="btn btn-outline-primary @ViewData["Previo"]"
+           asp-route-BusquedaActual="@ViewData["BusquedaActual"]">
+           Anterior
+        </a>
+        <span>Pagina @ViewData["PageNumber"] de @ViewData["TotalPaginas"]</span>
+        <a asp-action="Index"
+           asp-route-pageNumber="@((int)ViewData["PageNumber"]+1)" class="btn btn-outline-primary @ViewData["Siguiente"]"
+           asp-route-BusquedaActual="@ViewData["BusquedaActual"]">
+            Siguiente
+        </a>
+        <a asp-action="Index"
+           asp-route-pageNumber="@ViewData["TotalPaginas"]" class="btn btn-outline-primary"
+           asp-route-BusquedaActual="@ViewData["BusquedaActual"]">
+            <i class="bi bi-skip-end-fill"></i>
+        </a>
+
     </div>
 </section>
